; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_stacktrace.c_stack_trace_save.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_stacktrace.c_stack_trace_save.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stack_trace = type { i64*, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stack_trace_save(i64* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.stack_trace, align 8
  store i64* %0, i64** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = getelementptr inbounds %struct.stack_trace, %struct.stack_trace* %7, i32 0, i32 0
  %9 = load i64*, i64** %4, align 8
  store i64* %9, i64** %8, align 8
  %10 = getelementptr inbounds %struct.stack_trace, %struct.stack_trace* %7, i32 0, i32 1
  %11 = load i32, i32* %5, align 4
  store i32 %11, i32* %10, align 8
  %12 = getelementptr inbounds %struct.stack_trace, %struct.stack_trace* %7, i32 0, i32 2
  %13 = load i32, i32* %6, align 4
  %14 = add i32 %13, 1
  store i32 %14, i32* %12, align 4
  %15 = getelementptr inbounds %struct.stack_trace, %struct.stack_trace* %7, i32 0, i32 3
  store i32 0, i32* %15, align 8
  %16 = call i32 @save_stack_trace(%struct.stack_trace* %7)
  %17 = getelementptr inbounds %struct.stack_trace, %struct.stack_trace* %7, i32 0, i32 3
  %18 = load i32, i32* %17, align 8
  ret i32 %18
}

declare dso_local i32 @save_stack_trace(%struct.stack_trace*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
